----------------------------------------------------------------------
 OmegaT 3.1.8 
----------------------------------------------------------------------
   4 Enhancements
   8 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
3.1.8 vs. 3.1.7

  Implemented requests:
  
  - Allow custom background/foreground colors for different elements in the editor
  https://sourceforge.net/p/omegat/feature-requests/1035/

  - Show dialog for unsupported SVN errors 
  https://sourceforge.net/p/omegat/feature-requests/1041/

  Other enhancements:

  - It is now possible to customise colours used in the Fuzzy Matches pane  

  - All OmegaT windows (Search and Scripting windows) now use the OmegaT icon 
instead of the standard Java ones

  Bug fixes:

  - Project specific segmentation rules cannot be disabled
  https://sourceforge.net/p/omegat/bugs/694/

  - Colours were not working in the Fuzzy Matches pane

  - The text colour was not applied in the Editor

  - If there was a double click in the search result entries pane in the 
Search window before the first searching execution, the cursor (i.e., 
mouse pointer) changed to the Wait icon and could not be restored

  - Strange glossary behavior - removing of newly added terms
  https://sourceforge.net/p/omegat/bugs/696/

  - OmegaT keeps temporary files project_save.tmx-based_on_revision_number.new
  https://sourceforge.net/p/omegat/bugs/683/

  - Git team project saving failure with 3.1.6 
  https://sourceforge.net/p/omegat/bugs/714/

  - Fuzzy match segment not shown entirely when Ctrl+Arrow/Num is typed
  https://sourceforge.net/p/omegat/bugs/720/

  Localisation updates:

  - Dutch localisation updated to 3.1.7 (UI)
  - Interlingua localisation updated to 3.1.7 (UI, documentation)
  - Italian localisation updated to 3.1.7 (UI)
  - Japanese localisation updated to 3.1.8 (UI)

----------------------------------------------------------------------